# ruolan-app

./: .flutter-plugins-dependencies  .gitattributes  .gitignore  README.md  analysis_options.yaml  build_all.ps1  index.html  pubspec.yaml  setup_llama.ps1  tmp_patch.txt
.github/workflows/: ci.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  llama_wrapper.cpp
assets/images/: .gitkeep
docs/: 需求计划.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/config/: api_config.dart  inference_settings.dart  persona_config.dart  remote_settings.dart
lib/models/: agent_profile.dart  message.dart  model_info.dart  session.dart
lib/providers/: chat_provider.dart  settings_provider.dart  theme_provider.dart  voice_provider.dart
lib/screens/: about_screen.dart  home_screen.dart  model_manager_screen.dart  settings_screen.dart
lib/services/: chat_service.dart  llm_service.dart  model_settings.dart  storage_service.dart  stt_service.dart  tts_service.dart
lib/theme/: ruolan_colors.dart
lib/utils/: constants.dart  prompt_builder.dart  think_filter.dart
lib/widgets/left_panel/: chat_area.dart  (+6 more)
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
preview/: ruolan_preview.html
scripts/: check_native_cpp.sh
test/: settings_provider_test.dart  think_filter_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+9 files in other folders)
